# carads_etl

./: .env.example  .gitignore  README.md  __init__.py  index_example.json  pyproject.toml  tester.py
.cursor/rules/: 00-project-philosophy.mdc  01-python-engineering.mdc  02-architecture-layers.mdc  03-error-and-logging.mdc  04-data-access.mdc  05-elasticsearch.mdc  06-etl-pipeline.mdc  07-data-quality-and-dedup.mdc  08-performance.mdc  09-testing-and-comments.mdc  10-tests-etl.mdc  backend_architecture.md
app/clients/: __init__.py  archive_storage.py  elasticsearch_http.py  mongo_client.py  processed_storage.py  raw_storage.py
app/core/: __init__.py  http_backoff.py
app/database/: __init__.py  models.py  session.py
app/repositories/: __init__.py  archive_batches.py  elasticsearch_processed_ads.py  elasticsearch_processing_docs.py  ingestion_state.py  matching_state.py  mongo_raw_archive.py
app/schemas/: __init__.py
app/services/: __init__.py  telegram_notifier.py
app/shared/: __init__.py
app/uow/: __init__.py  archive_state_uow.py  ingestion_state_uow.py  matching_state_uow.py
scripts/: backfill_matcher.py  create_validation_index.py  validate_matcher.py
scripts/matching_scenario/: controlled_matching_scenario.md  production_copy_dry_run.md  run_controlled_matching_scenario.py  run_matching_dry_run.py
tests/: __init__.py  conftest.py
tests/unit/: test_duplicate_matcher.py  test_ingestion_sequential_cursor.py  test_matching_service_config.py  test_matching_worker_main.py  test_raw_to_processed_mapping.py  test_telegram_notifier.py
(+65 files in other folders)
