[project]
name = "etl-monorepo"
version = "0.1.0"
description = "Monorepo for a Python ETL pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "greenlet<3.4",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
